made some edits

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <h1>What Should I Watch?</h1>
         <img class="pop-icon" src="https://cdn-icons-png.flaticon.com/512/1170/1170586.png">
         <br>
-        <p>Type in a genre below and we'll suggest some shows!</p>
+        <p> Type in a genre below and we'll suggest some shows! </p>
 
-        <input placeholder="Comedy, action, or drama?">
-        <button>Submit!</button>
-        <div>
+        <input class="submission" placeholder="comedy, action, or drama?">
+        <button class="boton"> Submit! </button>
+        <div id="imageContainer">
         </div>
     </body>
 </html>
